grammar.js
    source: ($) => repeat(choice($._gap, $._form)),
    _gap: ($) => prec(PREC.GAP, $._ws),
    _form: ($) =>
      prec.right(
        choice(
          // atoms
          $._definition,
          $.variable_setter,
          $.variable_binding,
          $.number,
          // $.special_form,
          $.special_syntax,
          $.string,
          $.char,
          $.symbol,
          $.vector,
          $.char_table,
          $.bool_vector,
          $.hash_table,
          $.bytecode,
          $.record,
          $.text_properties,
          $.interactive,
          $.list,
          // $.keyword,
          $._dotted_pair_list,
          // some other reader macros
          $.fn_quote,
          $.quote,
          $.backquote,
          $.splice,
          $.backquote_eval,
          $.no_read_syntax
        )
      ),

    special_syntax: ($) =>
      prec(
        PREC.SPECIAL,
        choice(
          $.interned_empty_string,
          $.uninterned_symbol,
          $.circular_loop,
          $.circular_object,
          $.circular_ref,
          $.unreadable_form,
          $.byte_compiled_file_name
        )
      ),

    integer: ($) => prec.right(token.immediate(INTEGER)),

    number: ($) => prec.right(choice($.float, $.integer)),

    boolean: ($) => token(BOOLEAN),
    // Look for dot with space afterward for dotted notation
    dot: ($) => token(". "),

    keyword: ($) => token(seq(":", SYMBOL)),
    param_keyword: ($) => token(seq("&", choice("optional", "rest"))),
    symbol: ($) =>
      prec(
        PREC.NORMAL,
        choice(
          prec(10, $.boolean),
          // alias(token(seq(":", SYMBOL)), $.keyword),
          $.keyword,
          $.param_keyword,
          token(SYMBOL),
          // allow for dot to be symbol
          // TODO: only allow at end of list
          alias(token("."), $.dot),
          choice("defcustom", "cl-defmethod", "cl-defstruct", "cl-defgeneric"),
          token.immediate(/(cl-)?let(\*)?/),
          token.immediate(/((cl-)?def(subst|un)|lambda)/),
          token.immediate(/[a-z]?set(f|q)(-(local|default))?/),
          token.immediate(/(cl-|pcase-)?def(ine-compiler-)?macro/),
          token.immediate(/def(var|const)((-mode)?-local)?/)
        )
      ),

    quote: ($) => seq(field("marker", "'"), $._form),
    fn_quote: ($) => seq(field("marker", "#'"), $._form),
    backquote_eval: ($) => seq(field("marker", ","), $._form),
    splice: ($) => seq(field("marker", ",@"), $._form),
    backquote: ($) => seq(field("marker", "`"), $._form),

    dotted_pair: ($) =>
      prec.right(
        PREC.NORMAL,
        seq(field("car", $._form), $.dot, field("cdr", $._form))
      ),

    list: ($) =>
      seq(
        field("open", token.immediate("(")),
        repeat($._cons),
        field("close", token.immediate(")"))
      ),
    _cons: ($) =>
      prec.right(
        seq(
          $._form,
          // dotted pair without quotations can be the cdr of a cons cell
          // TODO: Only allow in the final cons cell of list
          optional(choice($._cons, $.dotted_pair))
        )
      ),

    string: ($) =>
      prec(
        2,
        seq(
          field("open", token.immediate('"')),
          repeat(
            choice(
              $.lisp_code,
              alias(
                choice(";", $._unescaped_double_string_fragment),
                $.string_fragment
              ),
              $.null,
              $.escape_sequence
            )
          ),
          field("close", token.immediate('"'))
        )
      ),
    lisp_code: ($) =>
      token.immediate(
        prec.right(
          3,
          choice(
            // Allow for escaped quotation mark in lisp-code
            seq("`", /[^'"`\n]*\\"[^'"`\n]*/, "'"),
            seq("`", /[^'"`\n]+/, "'")
          )
        )
      ),

    _unescaped_double_string_fragment: ($) =>
      token.immediate(
        choice(prec(2, /([^`"\\])+/), prec(1, seq("`", optional(/([^'"\\])+/))))
      ),

    unicode_name_esc: ($) => token(UNICODE_NAME_ESC),
    hex_esc: ($) => token(HEX_ESC),
    _octal_esc: ($) => token.immediate(OCTAL_ESC),
    keybind_esc: ($) => token(KEYBIND_ESC_STR),

    escape_sequence: ($) =>
      prec.right(
        3,
        seq(
          choice(
            $.unicode_name_esc,
            $.unicode_point_esc,
            $.hex_esc,
            alias($._octal_esc, $.octal_esc),
            $.keybind_esc,
            token(ALPHA_ESC)
          ),
          optional("\\ ")
        )
      ),

    vector: ($) =>
      seq("[", repeat(choice(field("value", $._form), $._gap)), "]"),

    _newline: ($) => token.immediate(/\n?/),

    comment: ($) =>
      prec(
        1,
        seq(
          ";",
          repeat(
            choice(
              // seq($.fn_autoload, $.autokey),
              choice($.autoload, $._comment_header),
              $.lisp_code,
              token.immediate(prec(2, /[^`\n]+/)),
              token.immediate(prec(2, seq("`", optional(/[^'"\n]+/))))
            )
          ),
          $._newline
        )
      ),
    _autoload_header: ($) =>
      token.immediate(prec(3, seq(";;###", optional("(")))),
    _comment_header: ($) =>
      token.immediate(prec(3, seq(choice(";;### ", ";;####"), /[^`\n]+/))),
    autoload: ($) =>
      seq(
        $._autoload_header,
        alias(optional(token.immediate(seq(/[a-zA-Z\\]+/))), $.function),
        optional("-"),
        alias("autoload", $.keyword)
      ),
    variable_definition: ($) =>
      prec.right(
        PREC.NORMAL,
        seq(
          "(",
          field(
            "special_form",
            alias(token.immediate(/def(var|const)((-mode)?-local)?/), $.symbol)
          ),
          choice(
            seq(field("name", $.symbol), field("initvalue", $._form)),
            seq(
              field("name", $.symbol),
              field("initvalue", $._form),
              field("docstring", $.string)
            ),
            seq(
              field("mode", $.symbol),
              field("name", $._form),
              field("initvalue", $._form),
              optional(field("docstring", $.string))
            )
          ),
          ")"
        )
      ),

    custom_definition: ($) =>
      prec.right(
        PREC.NORMAL,
        seq(
          field("open", token.immediate("(")),
          field("macro", alias("defcustom", $.symbol)),
          field("name", $.symbol),
          field("standard", $._form),
          field("docstring", $.string),
          repeat(
            seq(
              field("key", alias($._custom_args, $.keyword)),
              field("value", $._form)
            )
          ),
          field("close", token.immediate(")"))
        )
      ),
    _custom_args: ($) =>
      choice(
        ":type",
        ":options",
        ":require",
        ":set-after",
        ":risky",
        ":safe",
        ":local",
        ":group",
        ":link",
        ":package-version",
        ":version",
        ":tag",
        ":load",
        ":initialize",
        ":set",
        ":get"
      ),
    variable_binding: ($) =>
      prec.right(
        PREC.NORMAL,
        seq(
          "(",
          field(
            "special_form",
            alias(token.immediate(/(cl-)?let(\*)?/), $.symbol)
          ),
          "(",
          field("bindings", repeat1(choice($.symbol, $.list))),
          ")",
          repeat($._form),
          ")"
        )
      ),
    // _defun_header: ($) => prec.right(PREC.NORMAL),
    function_definition: ($) =>
      prec.right(
        PREC.NORMAL,
        seq(
          "(",
          field(
            "macro",
            alias(token.immediate(/((cl-)?def(subst|un)|lambda)/), $.symbol)
            // choice("defun", "defsubst", "cl-defun", "cl-defsubst", "lambda"),
          ),
          optional(field("name", $.symbol)),
          field("arglist", $.list),
          optional(field("docstring", $.string)),
          optional(field("interactive", $.interactive)),
          repeat($._form),
          ")"
        )
      ),

    macro_definition: ($) =>
      prec.right(
        PREC.NORMAL,
        seq(
          "(",
          field(
            "macro",
            alias(
              token.immediate(/(cl-|pcase-)?def(ine-compiler-)?macro/),
              $.symbol
            )
          ),
          field("name", $._form),
          field("arglist", $.list),
          optional(field("docstring", optional($.string))),
          optional(
            field("declaration", seq("(", "declare", repeat1($._form), ")"))
          ),
          repeat($._form),
          ")"
        )
      ),
    slot: ($) =>
      prec.right(
        choice(
          field("name", $.symbol),
          seq(
            "(",
            field("name", $.symbol),
            field("default", $._form),
            repeat(field("option", seq($.keyword, $._form))),
            ")"
          )
        )
      ),
    struct_definition: ($) =>
      prec.right(
        PREC.NORMAL,
        seq(
          "(",
          field("macro", alias("cl-defstruct", $.symbol)),
          field("name", choice($.symbol, $._form)),
          optional(field("docstring", optional($.string))),
          optional(field("slot", repeat($.slot))),
          ")"
        )
      ),
    byte_compiled_file_name: ($) => BYTE_COMPILED_FILE_NAME,
    interned_empty_string: ($) => INTERNED_EMPTY_STRING,
    uninterned_symbol: ($) =>
      seq(/#/, alias(token(seq(/:/, repeat1(WORD))), $.symbol_name)),
    circular_object: ($) =>
      prec.right(
        2,
        seq(
          field("name", alias($.circular_loop, $.name)),
          "=",
          field("object", repeat(choice($._form, $._gap)))
        )
      ),
    circular_loop: ($) => CIRCULAR_LOOP,

    circular_ref: ($) => CIRCULAR_REF,
    no_read_syntax: ($) => seq("#<", /[^>]*/, ">"),

    bytecode: ($) => prec(PREC.SPECIAL, seq("#[", repeat($._form), "]")),

    record: ($) => prec(PREC.SPECIAL, seq("#s(", repeat($._form), ")")),
