test/corpus/custom_definition.txt
================================================================================
Custom Definition
================================================================================

(defcustom add-log-dont-create-changelog-file t
  "If non-nil, don't create ChangeLog files for log entries.
If a ChangeLog file does not already exist, a non-nil value
means to put log entries in a suitably named buffer."
  :type 'boolean
  :safe #'booleanp
  :version "27.1")

(defcustom)

--------------------------------------------------------------------------------

(source
 (custom_definition
  (symbol)
  (symbol)
  (symbol (boolean))
  (string (string_fragment))
  (keyword)
  (quote (symbol))
  (keyword)
  (fn_quote (symbol))
  (keyword)
  (string (string_fragment)))
 (list
  (symbol)))
