test/corpus/extras.txt
================================================================================
Whitespace and comments
================================================================================
foo
                                        ; comment
;; comment

bar
;;;###autoload test other stuff

--------------------------------------------------------------------------------

(source
 (symbol)
 (comment)
 (comment)
 (symbol)
 (comment
  (autoload
   (keyword))))
