test/corpus/function_definition.txt
================================================================================
Function definition
================================================================================

(defun foo (x &optional y)
  "stuff"
  x)
(defsubst bar () nil)

(cl-defun no-args () 123)

`(defun ,x () ,@body)

'(cl-defun 1)
'(cl-defun)
'(defun foo)

--------------------------------------------------------------------------------

(source
 (function_definition
  (paren_open)
  (symbol)
  (symbol)
  (list
   (paren_open)
   (symbol)
   (symbol (param_keyword))
   (symbol)
   (paren_close))
  (string
   (string_fragment))
  (symbol)
  (paren_close))
 (function_definition
  (paren_open)
  (symbol)
  (symbol)
  (list
   (paren_open)
   (paren_close))
  (symbol (boolean))
  (paren_close))
 (function_definition
  (paren_open)
  (symbol)
  (symbol)
  (list
   (paren_open)
   (paren_close))
  (number
   (integer))
  (paren_close))
 (backquote
  (list
   (paren_open)
   (symbol)
   (backquote_eval (symbol))
   (list
    (paren_open)
    (paren_close))
   (splice (symbol))
   (paren_close)))
 (quote
  (list
   (paren_open)
   (symbol)
   (number (integer))
   (paren_close)))
 (quote
  (list
   (paren_open)
   (symbol)
   (paren_close)))
 (quote
  (list
   (paren_open)
   (symbol)
   (symbol)
   (paren_close))))
