test/corpus/lists.txt
================================================================================
Lists
================================================================================

()
( )
(foo (bar))
(1 2 . t)
(foo .)
'(;; comment
  foo bar)
((foo . bar)
 (foo . bar))
((foo . bar) 1)
--------------------------------------------------------------------------------

(source
 (list
  (paren_open)
  (paren_close))
 (list
  (paren_open)
  (paren_close))
 (list
  (paren_open)
  (symbol)
  (list
   (paren_open)
   (symbol)
   (paren_close))
  (paren_close))
 (list
  (paren_open)
  (number (integer))
  (dotted_pair (number (integer))
               (dot)
               (symbol (boolean)))
  (paren_close))
 (list
  (paren_open)
  (symbol)
  (symbol (dot))
  (paren_close))
 (quote
  (list
   (paren_open)
   (comment)
   (symbol)
   (symbol)
   (paren_close)))
 (list
  (paren_open)
  (list (paren_open )
        (symbol) (dot) (symbol) (paren_close ))
  (list (paren_open )
        (symbol) (dot) (symbol) (paren_close ))
  (paren_close))
 (list
  (paren_open)
  (list
   (paren_open)
   (symbol) (dot) (symbol)
   (paren_close))
  (number (integer))
  (paren_close)))
