test/corpus/macro_definition.txt
================================================================================
Macro definition
================================================================================

(defmacro foo (x &optional y)
  "stuff"
  x)

--------------------------------------------------------------------------------

(source
 (macro_definition
  (paren_open)
  (symbol)
  (symbol)
  (list
   (paren_open)
   (symbol)
   (symbol (param_keyword))
   (symbol)
   (paren_close))
  (string
   (string_fragment))
  (symbol)
  (paren_close)))
