test/corpus/variable_bindings.txt
================================================================================
Variable Bindings
================================================================================

(cl-let ((a (foo)))
        a)

(let* ((a bar))
  a)

--------------------------------------------------------------------------------

(source
 (variable_binding
  (symbol)
  (list
   (symbol)
   (list (symbol)))
  (symbol))
 (variable_binding
  (symbol)
  (list
   (symbol)
   (symbol))
  (symbol)))
